[package]
name = "l1x-sdk"
version = "0.3.1"
edition = "2021"
authors = ["The L1X Project Developers"]
description = "Rust library for writing L1X contracts"
license = "Apache-2.0"
keywords = ["l1x"]
homepage = "https://github.com/L1X-Foundation"

[dependencies]
borsh = { version = "0.9", features = ["const-generics"] }
l1x-sdk-macros = { version = "0.2.1", path = "../l1x-sdk-macros" }
l1x-sys = { version = "0.2.1", path = "../l1x-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
hex = "0.4"
macropol = "0.1.3"
uint = "0.9.5"


[dev-dependencies]
lazy_static = "1.4.0"